--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -50,6 +50,6 @@
 .imageStyle{
   border-radius: var(--ifm-pagination-nav-border-radius);
   min-width:175px;
-  height: 100%;
+  height: auto;
   object-fit: cover;
 }
