make containers the same height

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -15,7 +15,8 @@
   color: unset;
   text-decoration: unset;
   margin: var(--ifm-spacing-horizontal);
- 
+  display: grid;
+  grid-auto-rows: 1fr; 
 }
 .petCard:hover{
   color: unset;
