--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -22,7 +22,7 @@
   justify-content: center;
 }
 
-.container{
+.homeContainer{
   margin: 0 auto;
   max-width: var(--ifm-container-width);
   padding: 0 var(--ifm-spacing-horizontal);
